--- a/src/components/TopHeader.module.css
+++ b/src/components/TopHeader.module.css
@@ -32,7 +32,7 @@
   position: relative;
   overflow: hidden;
   flex-shrink: 0;
-  object-fit: cover;
+  object-fit: contain;
   display: none;
 }
 .explore {
